--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="5dp"
-    tools:context="br.edu.ifsp.scl.pdm.intent.MainActivity">
+    tools:context="br.edu.ifsp.scl.pdm.Intent.MainActivity">
 
     <EditText
         android:id="@+id/parametroEt"
