--- a/app/src/main/res/layout/activity_outra.xml
+++ b/app/src/main/res/layout/activity_outra.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="5dp"
-    tools:context="br.edu.ifsp.scl.pdm.intent.OutraActivity">
+    tools:context="br.edu.ifsp.scl.pdm.Intent.OutraActivity">
 
     <TextView
         android:id="@+id/recebidoTV"
